--- a/templates/produits/create_product.html
+++ b/templates/produits/create_product.html
@@ -10,24 +10,9 @@
 <body>
     <div class="container">
         <h1>Créer un produit</h1>
-        <form method="post" enctype="multipart/form-data"> <-- Sans l'entype, l'image ne peut pas arriver au backend->
-            {% csrf_token %} <-- Permet à Django de vérifier que nos données ne soient pas corrompues->
-            <div class="form-group">
-                <label for="nom">Nom du produit</label>
-                <input type="text" name = "nom" class="form-control" id="nom" placeholder="Entrez le nom du produit">
-            </div>
-            <div class="form-group">
-                <label for="description">Description</label>
-                <textarea name="description" class="form-control" id="description" placeholder="Entrez la description du produit" required></textarea>
-            </div>
-            <div class="form-group">
-                <label for="prix">Prix</label>
-                <input type="number" name = "prix" class="form-control" id="prix" placeholder="Entrez le prix du produit">
-            </div>
-            <div class="form-group">
-                <label for="image">Prix</label>
-                <input type="file" name = "image" class="form-control" id="image" >
-            </div>
+        <form method="post" enctype="multipart/form-data"> <!-- Sans l'entype, l'image ne peut pas arriver au backend-->
+            {% csrf_token %} <!-- Permet à Django de vérifier que nos données ne soient pas corrompues -->
+            {{ form.as_p}} 
             <button type="submit" class="btn btn-primary">Créer</button>
         </form>
     </div>
