--- a/templates/index.html
+++ b/templates/index.html
@@ -1,50 +1,8 @@
-<!DOCTYPE html>
-{% load static %}
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel = "stylesheet" href = "{% static 'css/styles.css' %}"> 
-    <title>Document</title>
-</head>
-<body>
-    
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{%url 'produits:index' %}">Acceuil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{%url 'produits:create_product' %}">Créer un produit</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <h1 class="display-1 text-primary mt-3 mb-3 text-center">Yo</h1>
-        <h2>Liste des {{nom }}</h2>
-        <ul class="list-group">
-            {% for produit in liste_produits %}
-            <li class="list-group-item">
-                {% if produit.prix == 0 %}
-                <strong style="color: #F0124E;">{{produit.nom | upper}} - {{produit.prix}}</strong>
-                {% else %}
-                <strong style="color: #11e29c">{{produit.nom | upper}} - {{produit.prix}}</strong>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    </div>
+{% extends 'base.html' %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>
+{% block content%}
+<div class="text-center display-3">
+Liste des produits
+</div>
+
+{% endblock%}
