--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
 <body>
 
     {% include 'nav_bar.html'%}
+    {% include 'messages.html'%}
     <div class="container">
         {% block content%}
 
